<resources>
    <string name="tableName_Tasks" translatable="false">Tasks</string>
    <string name="tableName_Categories" translatable="false">Categories</string>
    <string name="category_Name" translatable="false">categoryName</string>
    <string name="category_Count" translatable="false">categoryCount</string>
    <string name="task_text" translatable="false">taskText</string>
    <string name="task_isDone" translatable="false">taskIsDone</string>
    <string name="task_Category_id" translatable="false">taskCategoryId</string>
    <string name="task_Date" translatable="false">taskDate</string>
    <string name="task_Time" translatable="false">taskTime</string>
    <string name="task_subTasks_Count" translatable="false">taskSubTasksCount</string>
    <string name="task_doneSubTasks_Count" translatable="false">taskDoneSubTasksCount</string>
    <string name="subTask_name" translatable="false">subTaskName</string>
    <string name="subTask_isDone" translatable="false">subTaskIsDone</string>
    <string name="subTask_Task_id" translatable="false">subTaskTaskId</string>
    <string name="tableName_SubTasks" translatable="false">SubTasks</string>

    <string name="app_name">To Done</string>
    <string name="add_button">add</string>
    <string name="press_once_again_to_exit">press once again to exit</string>
    <string name="done">Done</string>
    <string name="your_task">Your Tasks</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="others">Others</string>
    <string name="noTask">You have no Task !</string>
    <string name="do_you_want_to_see_categoryTask">Do you want to see all tasks of this category?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_aTask">ADD\na Task</string>
    <string name="categories">Categories</string>
    <string name="noTask_toSee">No Tasks To See !</string>
    <string name="noCat_addOne">No Categories. add one :</string>
    <string name="longPress_fot_edit_delete">Long press on items inorder to Edit or Delete category or add new one :</string>
    <string name="you_can_have_up_to_categories">You can have up to 10 categories</string>
    <string name="add_category">Add category</string>
    <string name="task">Task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="systemDefault">SystemDefault</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="account_sync">Account Sync</string>
    <string name="themes">Themes</string>
    <string name="language">Language</string>
    <string name="en_lang_name">English</string>
    <string name="fa_lang_name">Persian</string>
    <string name="you_not_done_any">You have not done any task!</string>
    <string name="add_new_task">Add new Task</string>
    <string name="add_a_subtask">Add a Subtask</string>
    <string name="you_can_add_up_to_subtasks">You can add up to 5 Subtasks</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="set">Set</string>
    <string name="time">Time</string>
    <string name="try_log_press_on_items_for_deselect">Try log press on items for deselect them :)</string>
    <string name="max_subtask_len">Max length of a subTask is 30 characters</string>
    <string name="have_empty_subtask">You already have an empty Subtask</string>
    <string name="wanado_in_past">Want to do this in the past?!</string>
    <string name="date_first">You need to Set Date first !</string>
    <string name="wrong_date">You have chosen the wrong Date</string>
    <string name="wrong_time">You have chosen the wrong Date</string>
    <string name="select_a_category">Select a category</string>
    <string name="cat_exist">This category already exists!</string>
    <string name="category_limit">You have reached the limit. Delete or edit one</string>
    <string name="edit_category">Edit category</string>
    <string name="change_catName">You can change your category name</string>
    <string name="cat_name">Category name</string>
    <string name="change">Change</string>
    <string name="try_use_short_names">Try to use short names with meaning</string>
    <string name="delete_category">Delete Category</string>
    <string name="sure_delete_category">Are you sure you want to delete this Category ?</string>
    <string name="also_del_itsTasks">Also delete its Task</string>
    <string name="delete_task">Delete Task?</string>
    <string name="sure_delete_task">Are you sure you want to delete this task?</string>
    <string name="discard_change">Discard Changes?</string>
    <string name="sure_discard">Are you sure you want to discard all changes?</string>
    <string name="discard">Discard</string>
    <string name="subtask">subtask</string>
    <string name="google_drive">Google Drive</string>
    <string name="tap_to_login">Tap to login</string>
    <string name="google_drive_hint">To secure your information all tasks are stored locally. Please save them on your Google Drive so that you can restore them anywhere using your Google account.</string>
    <string name="last_time">Last Time</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="auto_sync_hint">turn on automatic save to avoid forgetting to sync tasks.</string>
    <string name="sync_now">Sync Now</string>

</resources>