<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:elevation="0dp"
        android:background="?colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAccount"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SettingsActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtAccountSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/tap_to_login"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/cardViewGD"
                    app:layout_constraintStart_toEndOf="@+id/cardViewGD"
                    app:layout_constraintTop_toBottomOf="@+id/txtGD" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewGD"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="?attr/colorOnSecondary"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgGD"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        app:srcCompat="@drawable/ic_google_drive_icon" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtGD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/google_drive"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/txtAccountSync"
                    app:layout_constraintStart_toEndOf="@+id/cardViewGD"
                    app:layout_constraintTop_toTopOf="@+id/cardViewGD" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtSyncHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/google_drive_hint"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/setLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSyncHint">

                <TextView
                    android:id="@+id/txtTitleLastTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/last_time"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgSmallClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/txtTitleLastTime"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitleLastTime"
                    app:srcCompat="@drawable/ic_clock_small" />

                <ImageView
                    android:id="@+id/imgsmallTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/txtTitleLastTime"
                    app:layout_constraintTop_toBottomOf="@+id/imgSmallClock"
                    app:srcCompat="@drawable/ic_task_square" />

                <TextView
                    android:id="@+id/txtSaveTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="  :  :  "
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imgSmallClock"
                    app:layout_constraintStart_toEndOf="@+id/imgSmallClock"
                    app:layout_constraintTop_toTopOf="@+id/imgSmallClock" />

                <TextView
                    android:id="@+id/txtSaveDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="   /   /   "
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imgSmallClock"
                    app:layout_constraintStart_toEndOf="@+id/txtSaveTime"
                    app:layout_constraintTop_toTopOf="@+id/imgSmallClock" />

                <TextView
                    android:id="@+id/txtSaveCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="..."
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imgsmallTask"
                    app:layout_constraintStart_toEndOf="@+id/imgsmallTask"
                    app:layout_constraintTop_toTopOf="@+id/imgsmallTask" />

                <TextView
                    android:id="@+id/txttask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/task"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imgsmallTask"
                    app:layout_constraintStart_toEndOf="@+id/txtSaveCount"
                    app:layout_constraintTop_toTopOf="@+id/imgsmallTask" />

                <TextView
                    android:id="@+id/txtTitleAutoSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/auto_sync"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgsmallTask" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/autoSaveSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="@null"
                    android:enabled="false"
                    android:thumb="@drawable/switch_thumb"
                    app:layout_constraintBottom_toBottomOf="@+id/txtTitleAutoSync"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtTitleAutoSync"
                    app:track="@drawable/switch_thumb_track" />

                <TextView
                    android:id="@+id/txtAutoSyncHint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/auto_sync_hint"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitleAutoSync" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btnSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:backgroundTint="@color/button_background"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/sync_now"
        android:textColor="@color/button_text_color"
        android:textStyle="bold"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="bottom|center"
        app:shapeAppearanceOverlay="@style/buttonShape" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>